--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,36 +3,38 @@
     "version": "0.1.0",
     "private": true,
     "scripts": {
-      "dev": "next dev",
-      "build": "next build",
-      "start": "next start",
-      "lint": "next lint"
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
     },
     "dependencies": {
-      "axios": "^1.8.4",
-      "class-variance-authority": "^0.7.1",
-      "clsx": "^2.1.1",
-      "jotai": "^2.12.2",
-      "lucide": "^0.483.0",
-      "lucide-react": "^0.483.0",
-      "mongoose": "^8.12.1",
-      "next": "15.2.3",
-      "next-themes": "^0.4.6",
-      "react": "^19.0.0",
-      "react-dom": "^19.0.0",
-      "react-hot-toast": "^2.5.2",
-      "react-icons": "^5.5.0",
-      "sonner": "^2.0.1",
-      "tailwind-merge": "^3.0.2",
-      "tw-animate-css": "^1.2.4"
+        "axios": "^1.8.4",
+        "class-variance-authority": "^0.7.1",
+        "clsx": "^2.1.1",
+        "jotai": "^2.12.2",
+        "js-cookie": "^3.0.5",
+        "jsonwebtoken": "^9.0.2",
+        "lucide": "^0.483.0",
+        "lucide-react": "^0.483.0",
+        "mongoose": "^8.12.1",
+        "next": "15.2.3",
+        "next-themes": "^0.4.6",
+        "react": "^19.0.0",
+        "react-dom": "^19.0.0",
+        "react-hot-toast": "^2.5.2",
+        "react-icons": "^5.5.0",
+        "sonner": "^2.0.1",
+        "tailwind-merge": "^3.0.2",
+        "tw-animate-css": "^1.2.4"
     },
     "devDependencies": {
-      "@tailwindcss/postcss": "^4",
-      "@types/node": "^20",
-      "@types/react": "^19",
-      "@types/react-dom": "^19",
-      "tailwindcss": "^4",
-      "typescript": "^5"
+        "@tailwindcss/postcss": "^4",
+        "@types/jsonwebtoken": "^9.0.9",
+        "@types/node": "^20",
+        "@types/react": "^19",
+        "@types/react-dom": "^19",
+        "tailwindcss": "^4",
+        "typescript": "^5"
     }
-  }
-  
+}
