--- a/backend/.env
+++ b/backend/.env
@@ -2,3 +2,4 @@
 JWT=SAI
 MONGO_URI=mongodb+srv://quip:Saikrishna%40488@myatlasclusteredu.i6qf0ml.mongodb.net/tastygo?retryWrites=true&w=majority&appName=myAtlasClusterEDU
 NODE_ENV=Development
+CLOUDINARY_API_SECRET=NZWY2XFmprJSc5XEqHMtVShZvEM
