--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,14 +22,17 @@
         "next-themes": "^0.4.6",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
+        "react-geolocated": "^4.3.0",
         "react-hot-toast": "^2.5.2",
         "react-icons": "^5.5.0",
+        "recharts": "^2.15.2",
         "sonner": "^2.0.1",
         "tailwind-merge": "^3.0.2",
         "tw-animate-css": "^1.2.4"
     },
     "devDependencies": {
         "@tailwindcss/postcss": "^4",
+        "@types/js-cookie": "^3.0.6",
         "@types/jsonwebtoken": "^9.0.9",
         "@types/node": "^20",
         "@types/react": "^19",
